<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/option_get_place"
        android:title="@string/option_get_place"
        app:showAsAction="always"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/history"
        android:title="History"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_refresh"
        android:checkable="false"
        android:title="refresh"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_scan"
        android:title="@string/menu_scan"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_stop"
        android:title="@string/menu_stop"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"/>
</menu>