<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.mad_devs.fitnesstrackerd.googleMap.MapActivity">

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <ImageButton
        android:id="@+id/myLocationButton"
        android:layout_width="38dp"
        android:layout_height="38dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_my_location_24"
        android:background="@drawable/button_my_location"
        app:pressedTranslationZ="12dp"
        app:fabSize="normal" />


    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/distance"
        android:layout_width="wrap_content">

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_outline"
            android:text="@string/start"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btn_outline"
            android:text="@string/reset"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btn_outline"
            android:text="@string/stop"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:background="@drawable/btn_outline"
            android:layout_marginEnd="8dp"
            android:text="@string/save"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <TextView
        android:gravity="center"
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/pulse"
        android:textColor="@color/white" />
    <TextView
        android:gravity="center"
        android:id="@+id/pulse"
        app:layout_constraintBottom_toTopOf="@id/avg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white" />
    <TextView
        android:gravity="center"
        android:id="@+id/avg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/time"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/time"
            android:textColor="@color/white" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>